# spel

./: .gitignore  CHANGELOG.md  Cargo.toml  LEZ_COMPAT_REPORT_006647bc.md  README.md
.github/workflows/: ci.yml  lez-compat-improved.yml  lez-compat.yml  publish.yml  release.yml  weekly-rc.yml
docs/: multi-seed-pda.md
lez-cli/: Cargo.toml
lez-cli/src/: cli.rs  generate_idl.rs  init.rs  lib.rs  tx.rs
lez-client-gen/src/: codegen.rs  tests.rs
lez-framework-core/: Cargo.toml
lez-framework-core/src/: idl_gen.rs  lib.rs
lez-framework/tests/: e2e.rs
scripts/: ffi-call-test.sh  init-e2e-test.sh  smoke-test-privacy.sh  smoke-test.sh
spel-admin-authority/: Cargo.toml  README.md
spel-admin-authority-sample/: Cargo.toml
spel-admin-authority-sample/src/: lib.rs
spel-admin-authority/src/: lib.rs
spel-cli/: Cargo.toml
spel-cli/src/: account_inspect.rs  cli.rs  config.rs  generate_idl.rs  hex.rs  init.rs  inspect.rs  lib.rs  parse.rs  pda.rs  serialize.rs  tx.rs
spel-client-gen/: Cargo.toml  README.md
spel-client-gen/src/: codegen.rs  ffi_codegen.rs  lib.rs  logos_module_codegen.rs  main.rs  tests.rs  util.rs
spel-ffi-compile-test/: Cargo.toml  build.rs
spel-ffi-compile-test/src/: lib.rs
spel-framework/: Cargo.toml
spel-framework-core/: Cargo.toml
spel-framework-core/src/: account_types.rs  decode.rs  error.rs  idl.rs  idl_gen.rs  lib.rs  pda.rs  spel_output.rs  types.rs  validation.rs
spel-framework-core/tests/: context_parameter.rs  custom_instruction.rs  owner_validation.rs  signer_validation.rs  variable_accounts.rs
spel-framework-macros/: Cargo.toml
spel-framework-macros/src/: account_types.rs  lib.rs
spel-framework/src/: lib.rs
spel-framework/tests/: e2e.rs
spel-freeze-authority/: Cargo.toml  README.md
spel-freeze-authority-sample/: Cargo.toml
spel-freeze-authority-sample/src/: lib.rs
spel-freeze-authority/src/: lib.rs
test-modules/: Makefile
test-modules/test_modules_ffi/: Cargo.toml
tests/e2e/fixture_program/: Cargo.toml
tests/e2e/fixture_program/src/: lib.rs
