[package]
name = "spel"
version = "0.1.0"
edition = "2021"
description = "Generic IDL-driven CLI for SPEL programs"

[[bin]]
name = "spel"
path = "src/bin/main.rs"

[dependencies]
spel-framework-core = { path = "../spel-framework-core", features = ["idl-gen"] }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
base58 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
