[package]
name = "spel"
version = "0.1.0"
edition = "2021"
description = "Generic IDL-driven CLI for SPEL programs"

[[bin]]
name = "spel"
path = "src/bin/main.rs"

[dependencies]
spel-framework-core = { path = "../spel-framework-core", features = ["idl-gen"] }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["client"] }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
base58 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
