[package]
name = "spel-client-gen"
version = "0.1.0"
edition = "2021"
description = "Generate typed Rust client and C FFI bindings from SPEL program IDL"
license = "MIT"

[dependencies]
spel-framework-core = { path = "../spel-framework-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
