[package]
name = "spel-ffi-compile-test"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
spel-client-gen = { path = "../spel-client-gen" }

[dependencies]
nssa        = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core   = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
wallet      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
serde_json  = "1"
serde       = { version = "1", features = ["derive"] }
borsh       = "1.5"
tokio       = { version = "1", features = ["rt-multi-thread"] }
hex         = "0.4"
sha2        = "0.10"
