[package]
name = "spel-framework-core"
version = "0.2.0"
edition = "2021"
description = "Core types for the SPEL program framework"

[features]
default = []
idl-gen = ["dep:syn"]

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
