[package]
name = "spel-framework-core"
version = "0.3.0"
edition = "2021"
description = "Core types for the SPEL program framework"

[features]
default = []
idl-gen = ["dep:syn", "dep:proc-macro2", "dep:toml"]
host = ["dep:nssa"]

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", optional = true }

syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
proc-macro2 = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
