[package]
name = "spel-framework"
version = "0.1.0"
edition = "2021"
description = "Developer framework for building SPEL programs (like Anchor for Solana)"

[dependencies]
spel-framework-core = { path = "../spel-framework-core" }
spel-framework-macros = { path = "../spel-framework-macros" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
spel-client-gen = { path = "../spel-client-gen" }
serde_json = "1"
