[package]
name = "spel-framework"
version = "0.3.0"
edition = "2021"
description = "Developer framework for building SPEL programs (like Anchor for Solana)"

[features]
default = []
host = ["dep:nssa", "spel-framework-core/host"]

[dependencies]
spel-framework-core = { path = "../spel-framework-core" }
spel-framework-macros = { path = "../spel-framework-macros" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", optional = true }
borsh = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
spel-client-gen = { path = "../spel-client-gen" }
