[workspace]

[package]
name = "fixture-program"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
spel-framework = { path = "../../../spel-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "ffcbc15972adbf557939bf3e2852af276422631b", features = ["host"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
